# Histimator

./: .gitignore  .travis.yml  AUTHORS.rst  Binned_Likelihood_Fit.py  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  InterpolationOptions.ipynb  LICENSE  Makefile  README.md  README.rst  TestingAddPdf.ipynb  TestingComb.ipynb  TestingConstraints.ipynb  ci.yml  histimodel_test.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test.py  testNP.py  test_SciPy_minimize.py  testing-addpdf.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
archive/: test_HF_struct.py  test_SciPy_minimize.py
benchmarks/: test_benchmarks.py
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: ApplyingOverallSyst.ipynb  FittingStackedHistograms.ipynb  LikelihoodFunctions.ipynb  MLEs.ipynb  PDFtests.ipynb
histimator/: Channel.py  Data.py  Estimator.py  Model.py  Models.py  NormFactor.py  Pdf.py  Sample.py  __init__.py  benchmark.py  estimator.py  fcn.py  interpolation.py  models.py  pdfs.py  statistics.py  util.py
histimator/backend/: .#scipy.py  __init__.py  (+2 more)
notebooks/: 00_quick_tour.ipynb  01_probability_and_likelihood.ipynb  02_building_models.ipynb  03_interpolation_and_modifiers.ipynb  04_fitting.ipynb  05_hypothesis_testing.ipynb  06_upper_limits.ipynb  07_toy_inference.ipynb  08_scans_and_goodness_of_fit.ipynb  09_diagnostics.ipynb  10_full_analysis.ipynb  Binned_Likelihood_Fit.ipynb  TestingAddPdf.ipynb  TestingComb.ipynb  TestingConstraints.ipynb  TestingScaling.ipynb  TestingScipyOptimize.ipynb  iMinuitWrapper.ipynb  tutorial.ipynb
tests/: README.md  __init__.py  benchmark.py  test.py  test_histimator.py  test_sprint10_toys.py  test_sprint11_scans.py  test_sprint12_diagnostics.py  test_sprint2_core.py  test_sprint3_interpolation.py  test_sprint4_model.py  test_sprint5_likelihood.py  test_sprint6_inference.py  test_sprint7_test_statistics.py  test_sprint8_cls.py  test_sprint9_modifiers.py
(+15 files in other folders)
